# notify-win

./: Cargo.toml  README.md  clippy.toml
notify-win/: Cargo.toml  LICENSE-CC0
notify-win-debouncer-full/: Cargo.toml  README.md
notify-win-debouncer-full/src/: cache.rs  lib.rs  time.rs
notify-win-debouncer-mini/: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
notify-win-debouncer-mini/src/: lib.rs
notify-win-types/: Cargo.toml
notify-win-types/src/: debouncer_full.rs  event.rs  lib.rs
notify-win/src/: config.rs  lib.rs  poll.rs  windows.rs
win-file-id/: Cargo.toml  README.md
win-file-id/src/: lib.rs
