[package]
name = "notify-win-debouncer-full"
version = "0.1.2"
description = "notify-win event debouncer optimized for ease of use"
documentation = "https://docs.rs/notify-win-debouncer-full"
authors = ["Daniel Faust <hessijames@gmail.com>"]
keywords = ["events", "filesystem", "notify", "watch"]
license = "MIT OR Apache-2.0"
readme = "README.md"
edition.workspace = true
homepage.workspace = true
repository.workspace = true

[features]
serde = ["notify-win-types/serde"]
crossbeam-channel = ["dep:crossbeam-channel", "notify-win/crossbeam-channel"]
serialization-compat-6 = ["notify-win/serialization-compat-6"]

[dependencies]
notify-win.workspace = true
notify-win-types.workspace = true
crossbeam-channel = { workspace = true, optional = true }
win-file-id.workspace = true
walkdir.workspace = true
log.workspace = true

[dev-dependencies]
rstest.workspace = true
serde.workspace = true
tempfile.workspace = true
