[package]
name = "notify-win-types"
version = "0.1.0"
description = "Types used by the notify-win crate, fork of notify-types"
documentation = "https://docs.rs/notify-win-types"
readme = "../README.md"
license = "MIT OR Apache-2.0"
keywords = ["events", "filesystem", "notify", "watch"]
categories = ["filesystem"]
authors = [
    "Daniel Faust <hessijames@gmail.com>",
    "0xJWLabs <0xjwlabs@gmail.com>",
]
edition.workspace = true
homepage.workspace = true
repository.workspace = true

[features]
serialization-compat-6 = []

[dependencies]
serde = { workspace = true, optional = true }

[dev-dependencies]
serde_jsonc2.workspace = true
rstest.workspace = true
